<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/container"
    android:layout_width="match_parent" android:layout_height="match_parent"
    tools:context=".MainActivity" tools:ignore="MergeRootFrame"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/normalMode"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:id="@+id/nomral"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal"
                android:textColor="#82858b"
                />
            <ImageView
                android:id="@+id/nomralPic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/normal"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/timeMode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time"
                android:textColor="#82858b"
                />
            <ImageView
                android:id="@+id/timePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/time"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/defineMode"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">
            <TextView
                android:id="@+id/define"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/define"
                android:textColor="#82858b"
                />
            <ImageView
                android:id="@+id/silencePic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/silence"
                />
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </FrameLayout>
</LinearLayout>