<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <RadioGroup
                android:id="@+id/RadioGroup01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/ring_and_vibrate01"
                    android:layout_width="fill_parent"
                    android:paddingLeft="50sp"
                    android:text="@string/ringAndVibrate"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/ring01"
                    android:layout_width="fill_parent"
                    android:paddingLeft="50sp"
                    android:paddingRight="50sp"
                    android:text="@string/ring"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/vibrate01"
                    android:layout_width="fill_parent"
                    android:paddingLeft="50sp"
                    android:paddingRight="50sp"
                    android:text="@string/vibrate"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/silent01"
                    android:layout_width="fill_parent"
                    android:paddingLeft="50sp"
                    android:paddingRight="50sp"
                    android:text="@string/silence"
                    android:textSize="24sp" />
            </RadioGroup>

            <RelativeLayout
                android:id="@+id/RelativeLayout01"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:padding="12sp" >

                <TextView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="20px"
                    android:textStyle="bold" >
                </TextView>

                <TimePicker
                    android:id="@+id/timePkr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/help" >
                </TimePicker>

                <RadioGroup
                    android:id="@+id/RadioGroup02"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/timePkr"
                    android:layout_centerInParent="true"
                    android:orientation="vertical" >

                    <RadioButton
                        android:id="@+id/ring_and_vibrate02"
                        android:layout_width="fill_parent"
                        android:paddingLeft="50sp"
                        android:text="@string/ringAndVibrate"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/ring02"
                        android:layout_width="fill_parent"
                        android:paddingLeft="50sp"
                        android:paddingRight="50sp"
                        android:text="@string/ring"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/vibrate02"
                        android:layout_width="fill_parent"
                        android:paddingLeft="50sp"
                        android:paddingRight="50sp"
                        android:text="@string/vibrate"
                        android:textSize="24sp" />

                    <RadioButton
                        android:id="@+id/silent02"
                        android:layout_width="fill_parent"
                        android:paddingLeft="50sp"
                        android:paddingRight="50sp"
                        android:text="@string/silence"
                        android:textSize="24sp" />
                </RadioGroup>
            </RelativeLayout>

            <AbsoluteLayout
                android:id="@+id/AbsoluteLayout03"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >

                <TextView
                    android:id="@+id/myText1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_x="20px"
                    android:layout_y="42px"
                    android:text="情景模式："
                    android:textSize="16sp" >
                </TextView>

                <ImageView
                    android:id="@+id/myImage"
                    android:layout_width="48px"
                    android:layout_height="48px"
                    android:layout_x="110px"
                    android:layout_y="32px" >
                </ImageView>

                <TextView
                    android:id="@+id/myText2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_x="20px"
                    android:layout_y="102px"
                    android:text="声音音量："
                    android:textSize="16sp" >
                </TextView>

                <ProgressBar
                    android:id="@+id/myProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="160dip"
                    android:layout_height="wrap_content"
                    android:layout_x="110px"
                    android:layout_y="102px"
                    android:max="7"
                    android:progress="5" >
                </ProgressBar>

                <ImageButton
                    android:id="@+id/downButton"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_x="50px"
                    android:layout_y="162px"
                    android:src="@drawable/down" >
                </ImageButton>

                <ImageButton
                    android:id="@+id/upButton"
                    android:layout_width="100px"
                    android:layout_height="100px"
                    android:layout_x="150px"
                    android:layout_y="162px"
                    android:src="@drawable/up" >
                </ImageButton>

                <ImageButton
                    android:id="@+id/normalButton"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_x="50px"
                    android:layout_y="272px"
                    android:src="@drawable/normal" >
                </ImageButton>

                <ImageButton
                    android:id="@+id/muteButton"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_x="120px"
                    android:layout_y="272px"
                    android:src="@drawable/silence" >
                </ImageButton>

                <ImageButton
                    android:id="@+id/vibrateButton"
                    android:layout_width="60px"
                    android:layout_height="60px"
                    android:layout_x="190px"
                    android:layout_y="272px"
                    android:src="@drawable/vibrate" >
                </ImageButton>
            </AbsoluteLayout>
        </FrameLayout>
    </LinearLayout>

</TabHost>